grabbing filtered text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
-                <form>
+                <form id="alien-form">
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
@@ -59,6 +59,7 @@
                   <th class="table-head">Shape</th>
                   <th class="table-head">Duration</th>
                   <th class="table-head">Comments</th>
+                  <ul id = "alien-data"></ul>
                 </tr>
               </thead>
               <tbody></tbody>
